--- a/pages/home.html
+++ b/pages/home.html
@@ -2,7 +2,7 @@
      <div class="tile is-parent is-6" id="network-stats">
         <div class="tile">
             <article class="tile is-child notification">
-                <p class="title size-is-4">Overview</p>
+                <p class="title size-is-5">Overview</p>
                 <div class="columns" style="padding-top:20px;">
                     <div class="column">
                         <ul class="nav nav-pills nav-stacked">
@@ -28,7 +28,7 @@
     <div class="tile is-parent is-6">
         <div class="tile">
             <article class="tile is-child notification">
-                <p class="title size-is-4">Chart</p>
+                <p class="title size-is-5">Chart</p>
                 <div class="chart-wrapper">
                     <canvas id="difficultyChart" height="210"></canvas>
                 </div>
@@ -40,7 +40,7 @@
     <div class="tile is-parent is-12">
         <div class="tile">
             <article class="tile is-child notification">
-                <p class="title size-is-4 badge is-badge-info" id="mempool_count">Memory Pool</p>
+                <p class="title size-is-5 badge is-badge-info" id="mempool_count">Memory Pool</p>
                 <div class="table">
                     <table class="table is-hoverable is-fullwidth is-size-6" id="mem_pool_table">
                         <thead>
@@ -61,7 +61,7 @@
 </div>    
 <div class="tile is-ancestor">
     <div class="tile is-parent is-12">
-        <div class="tile size-is-4">
+        <div class="tile size-is-5">
             <article class="tile is-child notification">
                 <div class="level">
                     <div class="level-left">
@@ -70,32 +70,31 @@
                     <div class="level-right">
                             <p class="is-size-6">Viewing Range: <span id="block-range">______ - ______</span></p>
                     </div>
-                    </div>
+                </div>
               
-                    <div class="field has-addons has-addons-right">
+                <div class="field has-addons has-addons-right">
+                    <p class="control">
+                        <a id="next-page" href="#" class="button is-dark disabled">
+                            Newer
+                        </a>
+                    </p>
 
-                            <p class="control">
-                              <a id="next-page" href="#" class="button is-dark disabled">
-                                    Newer
-                              </a>
-                            </p>
+                    <p class="control is-expanded">
+                        <input id="goto-height" class="input" type="text" placeholder="Block Height">
+                    </p>
 
-                            <p class="control is-expanded">
-                              <inputd="goto-height" class="input" type="text" placeholder="Block Height">
-                            </p>
+                    <p class="control">
+                        <a id="prev-page" href="#" class="button is-back">
+                            Go
+                        </a>
+                    </p>
 
-                            <p class="control">
-                                <a id="prev-page" href="#" class="button is-back">
-                                    Go
-                                </a>
-                            </p>
-
-                            <p class="control">
-                              <a id="prev-page" href="#" class="button is-dark">
-                                    Older
-                              </a>
-                            </p>
-                          </div>
+                    <p class="control">
+                        <a id="prev-page" href="#" class="button is-dark">
+                            Older
+                        </a>
+                    </p>
+                </div>
 
                 <hr>
                 <div class="table">
