--- a/pages/pools.html
+++ b/pages/pools.html
@@ -1,10 +1,10 @@
 <div class="tile is-ancestor">
-    <div class="tile is-parent is-6" id="network-stats">
+    <div class="tile is-parent is-6">
         <div class="tile">
             <article class="tile is-child notification">
                 <p class="title size-is-5">Pools Overview</p>
                 <div class="columns" style="padding-top:20px;">
-                    <div class="ccolumn">
+                    <div class="column">
                         <ul class="nav nav-pills nav-stacked">
                             <li><i class="fa fa-tachometer"></i> Pools speed: <span id="totalPoolsHashrate"></span></li>
                             <li><i class="fa fa-tachometer"></i> Network speed: <span id="networkHashrate"></span></li>
@@ -36,14 +36,14 @@
                         </p>
     
                         <p class="control">
-                            <a type="button" class="button is-dark dropdown-toggle" data-toggle="dropdown" id="calcHashDropdown">
-                                    <span id="calcHashUnit" data-mul="1">KH/s</span> <span class="caret"></span>
-                            </a>
-                            <ul class="dropdown-menu dropdown-menu-right" role="menu" id="calcHashUnits">
-                                <li><a href="#" data-mul="0">H/s</a></li>
-                                <li><a href="#" data-mul="1">KH/s</a></li>
-                                <li><a href="#" data-mul="2">MH/s</a></li>
-                            </ul>
+                            <div class="select is-fullwidth"  data-mul="1"id="calcHashUnit">
+                                <select name="country">
+                                    <option value="0"><a href="#" data-mul="0">H/s</a></option>
+                                    <option value="1"><a href="#" data-mul="1">KH/s</a></option>
+                                    <option value="2"><a href="#" data-mul="2">MH/s</a></option>
+                                </select>
+                            </div>
+                 
                         </p>
 
                         <p class="control">
@@ -67,7 +67,7 @@
             <article class="tile is-child notification">
                 <p class="title size-is-5" id="network-hash">Pool Network</p>
                 <div class="table">
-                    <table class="table is-hoverable is-fullwidth is-size-6" id="pools_rows">
+                    <table class="table is-hoverable is-fullwidth is-size-6" id="network-hash">
                         <thead>
                             <tr>
                                 <th><span id="symbol"></span> Pools</th>
@@ -92,7 +92,7 @@
             <div class="tile">
                 <article class="tile is-child notification">
                     <p class="title size-is-5" id="network-hash">Pool Chart</p>
-                    <canvas id="poolsChart" style="margin: 0 auto;" height="300"></canvas>
+                    <canvas id="poolsChart" style="margin: 0 auto;" height="300px"></canvas>
                 </article>
             </div>
         </div>
