--- a/pages/pools.html
+++ b/pages/pools.html
@@ -47,7 +47,7 @@
                         </p>
 
                         <p class="control">
-                            <button class="button is-dark">
+                            <button class="button is-light">
                                 =
                             </button>
                         </p>
@@ -56,7 +56,6 @@
                             <button class="button is-dark">
                                 <span id="calcHashResultsHolder"><span id="calcHashAmount"></span> <span id="calcHashSymbol"></span> ATHX / day</span>
                             </button>
-
                         </p>
                     </div>
        
@@ -70,7 +69,7 @@
     <div class="tile is-parent is-12">
         <div class="tile">
             <article class="tile is-child notification">
-                <p class="title size-is-5" id="network-hash">Pool Network</p>
+                <p class="title size-is-5">Pool Network</p>
                 <div class="table">
                     <table class="table is-hoverable is-fullwidth is-size-6" id="network-hash">
                         <thead>
@@ -115,4 +114,5 @@
 
 <script src="js/Chart.bundle.min.js"></script>
 <script src="js/color-hash.js"></script>
+<script src="js/sorttable.js"></script>
 <script src="js/pools.js"></script>
