tx style + api style

--- a/pages/pools.html
+++ b/pages/pools.html
@@ -47,7 +47,7 @@
                         </p>
 
                         <p class="control">
-                            <button class="button is-light">
+                            <button class="button is-white">
                                 =
                             </button>
                         </p>
@@ -96,7 +96,7 @@
             <div class="tile">
                 <article class="tile is-child notification">
                     <p class="title size-is-5" id="network-hash">Pool Chart</p>
-                    <canvas id="poolsChart" style="margin: 0 auto;" height="300px"></canvas>
+                    <canvas id="poolsChart" style="margin: 0 auto;" height="300" width="300></canvas>
                 </article>
             </div>
         </div>
