--- a/pages/blockchain_transaction.html
+++ b/pages/blockchain_transaction.html
@@ -1,58 +1,72 @@
-<h2><i class="fa fa-exchange fa-fw" aria-hidden="true"></i> Transaction</h2>
-<div class="row" id="tx_info">
-    <div class="col-md-12 stats">
-        <div><span data-toggle="tooltip" data-placement="right" data-original-title="Unique fingerprint of the transaction."><i class="fa fa-question-circle"></i></span> Hash: <span id="transaction.hash" style="word-break: break-all;"></span></div>
-		<div id="confirmations" style="display: none;"><span data-toggle="tooltip" data-placement="right" data-original-title="The number of network confirmations."><i class="fa fa-question-circle"></i></span> Confirmations: <span id="transaction.confirmations"></span>, First confirmation time: <span id="transaction.timestamp"></span> (<time class="transaction-timeago"></time>)</div>
-        <div><span data-toggle="tooltip" data-placement="right" data-original-title="Money that goes to the miner, who included this transaction into block."><i class="fa fa-question-circle"></i></span> Fee: <span id="transaction.fee"></span></div>
-        <div><span data-toggle="tooltip" data-placement="right" data-original-title="It does not mean that this is the amount that is actually transferred."><i class="fa fa-question-circle"></i></span> Sum of outputs: <span id="transaction.amount_out"></span></div>
-        <div><span data-toggle="tooltip" data-placement="right" data-original-title="Size of the transaction in bytes."><i class="fa fa-question-circle"></i></span> Size: <span id="transaction.size"></span></div>
-        <div id="div_transaction_paymentId"><span data-toggle="tooltip" data-placement="right" data-original-title="Optional user-defined hexadecimal characters string. Can be used by anyone to distinguish the transactions easier."><i class="fa fa-question-circle"></i></span> Payment ID: <span id="transaction.paymentId"></span>
-		<br />
-		Payment ID decoding: <em id="transaction.paymentIdDecifer"></em></div>
-        <div id="div_transaction_mixin"><span data-toggle="tooltip" data-placement="right" data-original-title="Denotes how many random inputs are mixed within this transactions in order to achieve desired level of anonimity. Mixin count 1 means no additional inputs are mixed in and thus each input can be traced back."><i class="fa fa-question-circle"></i></span> Mixin count: <span id="transaction.mixin"></span></div>
-		<div id="tx_unconfirmed" style="display: none;"><span data-toggle="tooltip" data-placement="right" data-original-title="The transaction is not included into block yet and therefore is not wtitten into blockchain."><i class="fa fa-question-circle"></i></span> <span class="text-warning">Unconfirmed transaction</span></div>
+<div class="tile is-ancestor">
+    <div class="tile is-parent is-6">
+        <div class="tile">
+            <article class="tile is-child notification">
+                <p class="title size-is-5">Transaction Overview</p>
+                <div>Hash: <span id="transaction.hash" style="word-break: break-all;"></span></div>
+                <div id="confirmations" style="display: none;">Confirmations: <span id="transaction.confirmations"></span>, First confirmation time: <span id="transaction.timestamp"></span> (<time class="transaction-timeago"></time>)</div>
+                <div>Fee: <span id="transaction.fee"></span></div>
+                <div>Sum of outputs: <span id="transaction.amount_out"></span></div>
+                <div>Size: <span id="transaction.size"></span></div>
+                <div id="div_transaction_paymentId">Payment ID: <span id="transaction.paymentId"></span>
+                <br />
+                Payment ID decoding: <em id="transaction.paymentIdDecifer"></em></div>
+                <div id="div_transaction_mixin">Mixin count: <span id="transaction.mixin"></span></div>
+                <div id="tx_unconfirmed" style="display: none;"><span class="text-warning">Unconfirmed transaction</span></div>
+            </article>
+        </div>
+    </div>
+
+    <div class="tile is-parent is-6">
+        <div class="tile">
+            <article class="tile is-child notification">
+                <p class="title size-is-5">Block Overview</p>
+                <div><i class="fa fa-circle-o"></i> Hash: <span id="block.hash" style="word-break: break-all;"></span></div>
+                <div><i class="fa fa-circle-o"></i> Height: <span id="block.height"></span></div>
+                <div><i class="fa fa-circle-o"></i> Timestamp: <span id="block.timestamp"></span></div>
+            </article>
+        </div>
     </div>
 </div>
-<div id="tx_block">
-	<h3><i class="fa fa-cube fa-fw" aria-hidden="true"></i> In block</h3>
-	<div class="row">
-		<div class="col-md-12 stats">
-			<div><i class="fa fa-circle-o"></i> Hash: <span id="block.hash" style="word-break: break-all;"></span></div>
-			<div><i class="fa fa-circle-o"></i> Height: <span id="block.height"></span></div>
-			<div><i class="fa fa-circle-o"></i> Timestamp: <span id="block.timestamp"></span></div>
-		</div>
-	</div>
-</div>
 
-<h3 class="inputs">Inputs (<span id="inputs_count"></span>)</h3>
-<div class="table-responsive">
-    <table class="table table-hover">
-        <thead>
-        <tr>
-            <th><i class="fa fa-money"></i> Amount</th>
-            <th><i class="fa fa-paw"></i> Image</th>
-        </tr>
-        </thead>
-        <tbody id="inputs_rows">
+<div class="tile is-ancestor">
+    <div class="tile is-parent is-6">
+        <div class="tile">
+            <article class="tile is-child notification">
+                <p class="title size-is-5">Inputs (<span id="inputs_count"></span>)</p>
+                <div class="table">
+                    <table class="table table-hover">
+                        <thead>
+                        <tr>
+                            <th><i class="fa fa-money"></i> Amount</th>
+                            <th><i class="fa fa-paw"></i> Image</th>
+                        </tr>
+                        </thead>
+                        <tbody id="inputs_rows"></tbody>
+                    </table>
+                </div>
+            </article>
+        </div>
+    </div>
 
-        </tbody>
-    </table>
-</div>
-
-
-<h3 class="outputs">Outputs (<span id="outputs_count"></span>)</h3>
-<div class="table-responsive">
-    <table class="table table-hover">
-        <thead>
-        <tr>
-            <th><i class="fa fa-money"></i> Amount</th>
-            <th><i class="fa fa-key"></i> Key</th>
-        </tr>
-        </thead>
-        <tbody id="outputs_rows">
-
-        </tbody>
-    </table>
+    <div class="tile is-parent is-6">
+            <div class="tile">
+            <article class="tile is-child notification">
+                <p class="title size-is-5">Outputs (<span id="outputs_count"></span>)</p>
+                <div class="table">
+                    <table class="table table-hover">
+                        <thead>
+                        <tr>
+                            <th><i class="fa fa-money"></i> Amount</th>
+                            <th><i class="fa fa-paw"></i> Image</th>
+                        </tr>
+                        </thead>
+                        <tbody id="outputs_rows"></tbody>
+                    </table>
+                </div>
+            </article>
+        </div>
+    </div>
 </div>
 
 <script>
