--- a/pages/blockchain_transaction.html
+++ b/pages/blockchain_transaction.html
@@ -2,7 +2,7 @@
     <div class="tile is-parent is-12">
         <div class="tile">
             <article class="tile is-child notification">
-                <p class="title size-is-5">Transaction</p>
+                <p class="title is-size-5">Transaction</p>
                 <div>Hash: <span id="transaction.hash" style="word-break: break-all;"></span></div>
                 <div id="confirmations" style="display: none;">Confirmations: <span id="transaction.confirmations"></span>, First confirmation time: <span id="transaction.timestamp"></span> (<time class="transaction-timeago"></time>)</div>
                 <div>Fee: <span id="transaction.fee"></span></div>
@@ -22,12 +22,12 @@
 </div>
 
 <div class="tile is-ancestor">
-    <div class="tile is-parent is-12">
+    <div class="tile is-parent is-6">
         <div class="tile">
             <article class="tile is-child notification">
-                <p class="title size-is-5">Inputs (<span id="inputs_count"></span>)</p>
+                <p class="title is-size-5">Inputs (<span id="inputs_count"></span>)</p>
                 <div class="table">
-                    <table class="table table-hover">
+                    <table class="table table-hover is-size-6">
                         <thead>
                         <tr>
                             <th><i class="fa fa-money"></i> Amount</th>
@@ -40,14 +40,12 @@
             </article>
         </div>
     </div>
-</div>
-<div class="tile is-ancestor">
-    <div class="tile is-parent is-12">
+    <div class="tile is-parent is-6">
             <div class="tile">
             <article class="tile is-child notification">
-                <p class="title size-is-5">Outputs (<span id="outputs_count"></span>)</p>
+                <p class="title is-size-5">Outputs (<span id="outputs_count"></span>)</p>
                 <div class="table">
-                    <table class="table table-hover">
+                    <table class="table table-hover is-size-6">
                         <thead>
                         <tr>
                             <th><i class="fa fa-money"></i> Amount</th>
