--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
 		<header class="navbar" style="padding-top:10px;">
 			<div class="container">
 			<div class="navbar-brand">
-				<a href="/" class="navbar-item is-size-3 has-text-weight-semibold">
-					Athena Explorer
+				<a href="/" class="navbar-item">
+					<p class="is-size-3 has-text-weight-semibold">Athena Explorer</p>
 				</a>
 				<span class="navbar-burger burger" data-target="navbarMenu">
 				<span></span>
@@ -209,7 +209,7 @@
 				<span class="navbar-item">
 					<a data-page="pools.html" href="#pools" class="button is-light hot_link">
 					<span class="icon">
-						<i class="fa fa-gavel"></i>
+						<i class="fa fa-users"></i>
 					</span>
 					<span>Pools</span>
 					</a>
@@ -288,7 +288,7 @@
 	<div class="container">
 		<div class="columns">
 			<div class="column has-text-left">
-					&copy; 2018 Athena Foundation 
+					&copy; 2018 <a href="http://athx.org">Athena Foundation </a>
 
 			</div>
 			<div class="column has-text-right">
