--- a/pages/api.html
+++ b/pages/api.html
@@ -2,7 +2,7 @@
 	<div class="tile is-parent is-12">
 		<div class="tile">
 			<article class="tile is-child notification">
-				<p class="title size-is-5">API</p>
+				<p class="title is-4">API</p>
 				<ul>
 					<li><strong><a href="/q/hashrate">hashrate</a></strong> &ndash; current estimated network hashrate</li>
 					<li><strong><a href="/q/height">height</a></strong> &ndash; current height (incl. genesis block)</li>
