--- a/pages/blockchain_transaction.html
+++ b/pages/blockchain_transaction.html
@@ -32,7 +32,7 @@
             <article class="tile is-child notification">
                 <p class="title size-is-4">Inputs (<span id="inputs_count"></span>)</p>
                 <div class="table">
-                    <table class="table table-hover is-size-6">
+                    <table class="table table-hover is-5">
                         <thead>
                         <tr>
                             <th><i class="fa fa-money"></i> Amount</th>
@@ -50,7 +50,7 @@
             <article class="tile is-child notification">
                 <p class="title size-is-4">Outputs (<span id="outputs_count"></span>)</p>
                 <div class="table">
-                    <table class="table table-hover is-size-6">
+                    <table class="table table-hover is-5">
                         <thead>
                         <tr>
                             <th><i class="fa fa-money"></i> Amount</th>
