--- a/pages/pools.html
+++ b/pages/pools.html
@@ -2,7 +2,7 @@
     <div class="tile is-parent is-6">
         <div class="tile">
             <article class="tile is-child notification">
-                <p class="title size-is-5">Pools Overview</p>
+                <p class="title is-4">Pools Overview</p>
                 <div class="columns" style="padding-top:20px;">
                     <div class="column">
                         <ul class="nav nav-pills nav-stacked">
@@ -26,7 +26,7 @@
     <div class="tile is-parent is-6">
         <div class="tile">
             <article class="tile is-child notification">
-                <p class="title size-is-5"> Estimate Mining Profits</p>
+                <p class="title is-4"> Estimate Mining Profits</p>
                 <div id="calcHashHolder">
 
                     <div class="field has-addons has-addons-right">
@@ -69,9 +69,9 @@
     <div class="tile is-parent is-12">
         <div class="tile">
             <article class="tile is-child notification">
-                <p class="title size-is-5">Pool Network</p>
+                <p class="title is-4">Pool Network</p>
                 <div class="table">
-                    <table class="table is-hoverable is-fullwidth is-size-6" id="network-hash">
+                    <table class="table is-hoverable is-fullwidth is-5" id="network-hash">
                         <thead>
                             <tr>
                                 <th><span id="symbol"></span> Pools</th>
@@ -95,7 +95,7 @@
         <div class="tile is-parent is-12">
             <div class="tile">
                 <article class="tile is-child notification">
-                    <p class="title size-is-5" id="network-hash">Pool Chart</p>
+                    <p class="title is-4" id="network-hash">Pool Chart</p>
                     <canvas id="poolsChart" style="margin: 0 auto;" height="300" width="300></canvas>
                 </article>
             </div>
