--- a/pages/blockchain_block.html
+++ b/pages/blockchain_block.html
@@ -38,7 +38,7 @@
 			<article class="tile is-child notification">
 				<p class="title size-is-4">Тransactions></p>
 				<div class="table">
-					<table class="table table-hover is-size-6">
+					<table class="table table-hover is-5">
 						<thead>
 						<tr>
 							<th><i class="fa fa-paw"></i> Hash</th>
