--- a/pages/pools.html
+++ b/pages/pools.html
@@ -112,7 +112,7 @@
 
 <br />
 
-<script src="js/Chart.bundle.min.js"></script>
-<script src="js/color-hash.js"></script>
-<script src="js/sorttable.js"></script>
-<script src="js/pools.js"></script>
+<script src="assets/js/Chart.bundle.min.js"></script>
+<script src="assets/js/color-hash.js"></script>
+<script src="assets/js/sorttable.js"></script>
+<script src="assets/js/pools.js"></script>
