fixed asset links

--- a/pages/check_txn.html
+++ b/pages/check_txn.html
@@ -46,8 +46,8 @@
 </div>
 
 
-<script src="js/crypto_utils.js" type="text/javascript"></script>
-<script src="js/check_txn.js" type="text/javascript"></script>
+<script src="./assets/js/crypto_utils.js" type="text/javascript"></script>
+<script src="./assets/js/check_txn.js" type="text/javascript"></script>
 <script>
     currentPage = {
         destroy: function(){},
