--- a/pages/home.html
+++ b/pages/home.html
@@ -780,4 +780,4 @@
         return formatAmounts(amount, units[units.length - 1][1]);
     }
 </script>
-<script src="./js/Chart.bundle.min.js"></script>
+<script src="./assets/js/Chart.bundle.min.js"></script>
