--- a/pages/pools.html
+++ b/pages/pools.html
@@ -96,7 +96,7 @@
             <div class="tile">
                 <article class="tile is-child notification">
                     <p class="title is-4" id="network-hash">Pool Chart</p>
-                    <canvas id="poolsChart" style="margin: 0 auto;" height="300" width="300></canvas>
+                    <canvas id="poolsChart" style="margin: 0 auto;" height="300" width="300"></canvas>
                 </article>
             </div>
         </div>
@@ -112,7 +112,7 @@
 
 <br />
 
-<script src="assets/js/Chart.bundle.min.js"></script>
-<script src="assets/js/color-hash.js"></script>
-<script src="assets/js/sorttable.js"></script>
-<script src="assets/js/pools.js"></script>
+<script src="./assets/js/Chart.bundle.min.js"></script>
+<script src="./assets/js/color-hash.js"></script>
+<script src="./assets/js/sorttable.js"></script>
+<script src="./assets/js/pools.js"></script>
