--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 									<span class="icon">
 										<i class="fa fa-cubes"></i>
 									</span>
-									<span>Block Explorer</span>
+									<span>Explorer</span>
 									</a>
 								</span>
 								<span class="navbar-item">
