--- a/pages/home.html
+++ b/pages/home.html
@@ -57,10 +57,11 @@
             </article>
         </div>
     </div>
-</div>    
+</div> 
+
 <div class="tile is-ancestor">
     <div class="tile is-parent is-12">
-        <div class="tile is-4">
+        <div class="tile">
             <article class="tile is-child notification">
                 <div class="level">
                     <div class="level-left">
@@ -100,12 +101,12 @@
                     <table class="table is-hoverable is-fullwidth is-5">
                         <thead>
                             <tr>
-                                <th><i class="fa fa-bars"></i> Height</th>
-                                <th><i class="fa fa-archive"></i> Size</th>
-                                <th><i class="fa fa-paw"></i> Block Hash</th>
-                                <th><i class="fa fa-unlock-alt"></i> Difficulty</th>
-                                <th><i class="fa fa-bars"></i> Txs</th>
-                                <th><i class="fa fa-clock-o"></i> Date &amp; time</th>
+                                <th>Height</th>
+                                <th>Size</th>
+                                <th>Block Hash</th>
+                                <th>Difficulty</th>
+                                <th>Txs</th>
+                                <th>Timestamp</th>
                             </tr>
                         </thead>
                         <tbody id="blocks_rows"></tbody>
