--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
 		
-		<link rel="shortcut icon" href="assets/favicon.ico">
+		<link rel="shortcut icon" href="./assets/favicon.ico">
 
 		<title>Athena [ATHX] Block Explorer</title>
 
@@ -14,14 +14,14 @@
 		<script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 		
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
-		<link rel="stylesheet" href="assets/css/themes/athena/style.css" id="theme_link">
-		<link rel="stylesheet" href="assets/css/themes/athena/bulma-badge.min.css">
+		<link rel="stylesheet" href="./assets/css/themes/athena/style.css" id="theme_link">
+		<link rel="stylesheet" href="./assets/css/themes/athena/bulma-badge.min.css">
 
 		<script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
 
 		<script src="./config.js"></script>
-		<script src="assets/js/main.js"></script>
-		<script src="assets/js/search.js"></script>
+		<script src="./assets/js/main.js"></script>
+		<script src="./assets/js/search.js"></script>
 
 		<script type="text/javascript">
 			document.addEventListener('DOMContentLoaded', () => {
