--- a/pages/home.html
+++ b/pages/home.html
@@ -511,13 +511,13 @@
                 data: [].concat(Difficulties).reverse(),
                 yAxisID: "Difficulty",
                 label: "Difficulty",
-                backgroundColor: "rgba(220,220,220,0.2)",
-                borderColor: '#2FA4E7',
+                backgroundColor: "rgba(0,0,0,0.2)",
+                borderColor: '#000000',
                 borderWidth: 2,
-                pointColor: "#2FA4E7",
-                pointBorderColor: "#2FA4E7",
-                pointHighlightFill: "#2FA4E7",
-                pointBackgroundColor: "#2FA4E7",
+                pointColor: "#000000",
+                pointBorderColor: "#000000",
+                pointHighlightFill: "#000000",
+                pointBackgroundColor: "#000000",
                 pointBorderWidth: 2,
                 pointRadius: 1,
                 pointHoverRadius: 3,
@@ -526,13 +526,13 @@
                 data: [].concat(Txses).reverse(),
                 yAxisID: "Transactions",
                 label: "Transactions",
-                backgroundColor: "rgba(255,242,0,0.1)",
-                borderColor: '#B5E61D',
+                backgroundColor: "rgba(248,223,88,0.1)",
+                borderColor: '#f8df58',
                 borderWidth: 1,
-                pointColor: "#B5E61D",
-                pointBorderColor: "#B5E61D",
-                pointHighlightFill: "#B5E61D",
-                pointBackgroundColor: "#B5E61D",
+                pointColor: "#f8df58",
+                pointBorderColor: "#f8df58",
+                pointHighlightFill: "#f8df58",
+                pointBackgroundColor: "#f8df58",
                 pointBorderWidth: 1,
                 pointRadius: 1,
                 pointHoverRadius: 3,
@@ -541,13 +541,13 @@
                 data: [].concat(Sizes).reverse(),
                 yAxisID: "Sizes",
                 label: "Size",
-                backgroundColor: "rgba(65,172,0,0.1)",
-                borderColor: '#99D9EA',
+                backgroundColor: "rgba(242,53,101,0.1)",
+                borderColor: '#f23565',
                 borderWidth: 1,
-                pointColor: "#99D9EA",
-                pointBorderColor: "#99D9EA",
-                pointHighlightFill: "#99D9EA",
-                pointBackgroundColor: "#99D9EA",
+                pointColor: "#f23565",
+                pointBorderColor: "#f23565",
+                pointHighlightFill: "#f23565",
+                pointBackgroundColor: "#f23565",
                 pointBorderWidth: 1,
                 pointRadius: 1,
                 pointHoverRadius: 3,
